...

        // todo mostrar apenas disponíveis toggle
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier.padding(horizontal = 16.dp, vertical = 8.dp)
        ) {
            Text("Mostrar apenas as horas disponíveis", modifier = Modifier.weight(1f))
            Switch(
                checked = onlyAvailable.value,
                onCheckedChange = { onlyAvailable.value = it }
            )
        }

...
            },
            enabled = selectedTime.value != null,
            modifier = Modifier
                .fillMaxWidth()
                .padding(16.dp)
        ) {
            Text("Continuar")
        }
    }
}



...
